--- a/app-frontend/src/index.css
+++ b/app-frontend/src/index.css
@@ -818,7 +818,7 @@ button[type="submit"]:hover {
 .read-more-btn {
   background: none;
   border: none;
-  color: var(--secondary-color);
+  color: var(--primary-color);
   cursor: pointer;
   font-weight: 600;
   padding: 0;
@@ -946,4 +946,33 @@ button[type="submit"]:hover {
     width: 260px;
     height: 260px;
   }
+}
+
+.banner-container {
+  position: relative;
+  width: 100%;
+  height: 400px; /* adjust */
+  overflow: hidden;
+}
+
+.fade-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  animation: fadeSlide 32s infinite;
+}
+
+.fade-image:nth-child(1) { animation-delay: 0s; }
+.fade-image:nth-child(2) { animation-delay: 8s; }
+.fade-image:nth-child(3) { animation-delay: 16s; }
+.fade-image:nth-child(4) { animation-delay: 24s; }
+
+@keyframes fadeSlide {
+  0%   { opacity: 0; }
+  5%   { opacity: 1; }
+  25%  { opacity: 1; }
+  30%  { opacity: 0; }
+  100% { opacity: 0; }
 }
